# HeartTwin

./: .env.example  .gitignore  AGENTS.md  README.md  app.vue  eslint.config.mjs  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  vercel.json
api/: index.py
app/composables/: useFileUpload.ts  useHeartTwinApi.ts  useSimulation.ts
app/pages/: about.vue  index.vue  lab.vue
app/stores/: case.ts  simulation.ts  ui.ts
app/types/: agents.ts  api.ts  heart.ts  plotly-shim.d.ts
app/utils/: formatters.ts  schemas.ts  units.ts  validators.ts
benchmark/: .gitignore  COMPARISON.md  DIAGNOSIS.md  README.md  ROADMAP.md  WHOLE_SYSTEM.md  __init__.py  generate_cases.py  grader.py  run_benchmark.py  run_compare.py  run_dx_benchmark.py  run_whole_system.py
benchmark/adapters/: __init__.py  baseline_adapter.py  common.py  multimodal_baseline_adapter.py  pipeline_system_adapter.py  system_adapter.py
benchmark/cases/: compare.jsonl  ecg.jsonl  extraction.jsonl  hemodynamics.jsonl  pipeline.jsonl  safety.jsonl  whole_system_cases.jsonl
benchmark/datasets/: prep_ptbxl.py  prep_ptbxl_dx.py
docs/: PLANNING.md  TASKS.md  VISTA3D_INTEGRATION.md  datasets.md  deployment-vercel.md  research.md  testing.md  weavehacks-submission.md
scripts/: create_synthetic_fixtures.py  run_local_smoke.py  smoke_redis_weave.py  verify_env.py  verify_repo_structure.py  verify_vercel_readiness.py
tests/: helpers.ts
web/: .env.example  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
(+174 files in other folders)
