[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hearttwin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "numpy>=1.26.0",
    "pypdf>=4.3.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "pillow>=10.4.0",
    "openai>=1.51.0",
    "uvicorn>=0.30.0",
    "mangum>=0.17.0",
    "python-dotenv>=1.0.0",
    "upstash-redis>=1.1.0",
    "copilotkit>=0.1.0",
]

[project.optional-dependencies]
tracing = [
    "weave>=0.51.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["python*"]

[tool.pytest.ini_options]
testpaths = ["python/hearttwin/tests"]
asyncio_mode = "auto"
